[package]
authors = ["pwnwriter <hey@pwnwriter.xyz>"]
edition = "2021"
name = "whmcs-json-updater"
version = "0.1.0"

[dependencies]
reqwest = { version = "0.11.24", features = ["blocking", "rustls-tls"], default-features = false }
ring = "0.17.8"
serde_json = "1.0"
chrono = "0.4"
env_logger = "0.11.2"

